--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
 	<title>Zaid Diaz</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/home-style.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/components/lightbox.js"></script>
 </head>
 <div class="wrapper">
 	<body>
