Added Lightbox to the home page
Added Lightbox picture gallery to the home page.

--- a/home.html
+++ b/home.html
@@ -6,9 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<title>Zaid Diaz</title>
+	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<link href="lightbox2-master/dist/css/lightbox.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/home-style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/components/lightbox.js"></script>
 </head>
 <div class="wrapper">
 	<body>
@@ -36,8 +37,34 @@
 
 			<div class="page-divider"></div>
 			
+				
+			<div class="row">
+				<div class="col-8">
+					<a href="images/photos/florida.jpg" data-lightbox="image-1" data-title="My caption"><img src="images/photos/florida.jpg" width="100" height="100"></a>
+					
+				</div>
+
+			</div>
+
+	
 
 
+
+
+
+
+
+
+
+			
+
+
+
+
+
+
+
+			<!-- SOCIAL MEDIA LINKS -->
 			<div class="row">
 				<div class="col-12" id="social">
 					<a target="_blank" href="https://www.instagram.com/zdpz/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -63,7 +90,8 @@
 		  src="https://code.jquery.com/jquery-3.1.1.min.js"
 		  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 		  crossorigin="anonymous">
-		 </script>
+		</script>
+		<script src="lightbox2-master/dist/js/lightbox.js"></script>
 		<script type="text/javascript" src="app/app.js"></script>
 	</body>
 
