Added 1 new photo.
Added one new photo to the gallery and waiting for more from the client.

--- a/landingpage.html
+++ b/landingpage.html
@@ -22,7 +22,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-12" id="enter-row"><button id="enter"><a href="https://www..com">ENTER</a></button></div>
+				<div class="col-12" id="enter-row"><button id="enter"><a href="home.html">ENTER</a></button></div>
 			</div>
 
 			<div class="row">
