--- a/home.html
+++ b/home.html
@@ -39,8 +39,10 @@
 			
 				
 			<div class="row">
-				<div class="col-8">
-					<a href="images/photos/florida.jpg" data-lightbox="image-1" data-title="My caption"><img src="images/photos/florida.jpg" width="100" height="100"></a>
+				<div class="col-12" id="photo-gallery">
+					<a href="images/photos/florida.jpg" data-lightbox="orlando-florida" data-title="My caption"><img src="images/photos/florida.jpg" width="250" height="250"></a>
+
+					<a href="images/photos/florida2.jpg" data-lightbox="orlando-florida" data-title="My caption"><img src="images/photos/florida2.jpg" width="250" height="250"></a>
 					
 				</div>
 
