Added about me and gallery page
Added about me page with a paragraph text about the owner of the site
and gallery page.  Added pictures to the gallery page, alt text need to
be added for each picture.

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,8 @@
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<link href="lightbox2-master/dist/css/lightbox.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/home-style.css">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/general-style.css">
 </head>
 <div class="wrapper">
 	<body>
@@ -26,10 +27,10 @@
 			<div class="row">
 				<div class="col-12" id="navigation">
 					<ul id="nav-list">
-						<li class="liGallery"><a href="">GALLERY</a></li>
-						<li class="liAboutme"><a href="">ABOUT ME</a></li>
-						<li class="liInfo"><a href="">INFO</a></li>
-						<li class="liJournal"><a href="">JOURNAL</a></li>
+						<li class="liGallery"><a href="gallery.html">GALLERY</a></li>
+						<li class="liAboutme"><a href="aboutme.html">ABOUT ME</a></li>
+						<li class="liInfo"><a href="info.html">INFO</a></li>
+						<li class="liJournal"><a href="journal.html">JOURNAL</a></li>
 					</ul>
 				</div>
 			</div>
@@ -38,15 +39,10 @@
 			<div class="page-divider"></div>
 			
 				
-			<div class="row">
-				<div class="col-12" id="photo-gallery">
-					<a href="images/photos/florida.jpg" data-lightbox="orlando-florida" data-title="My caption"><img src="images/photos/florida.jpg" width="250" height="250"></a>
-
-					<a href="images/photos/florida2.jpg" data-lightbox="orlando-florida" data-title="My caption"><img src="images/photos/florida2.jpg" width="250" height="250"></a>
-					
-				</div>
-
-			</div>
+			
+			<p class="aboutme">
+				Hello, my name is Zaid. I’m a observer of the world. I see the beauty in things that most people don’t see. My focus is on capturing life as is, unaltered and natural. I enjoy the small things in life, they bring us those moments in life that keep us going. Join me on this on never ending adventure to capture the world for what it is.
+			</p>
 
 	
 
