--- a/gallery.html
+++ b/gallery.html
@@ -6,25 +6,67 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<title>Zaid Diaz</title>
+	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="css/landingpage-style.css">
+	<link href="lightbox2-master/dist/css/lightbox.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/general-style.css">
 </head>
 <div class="wrapper">
 	<body>
 		
 
 			<div class="row">
-				<div class="col-12" id="welcome">WELCOME</div>
+				<div class="col-12" id="header">ZAID DIAZ</div>
 			</div>
 
 			<div class="row">
-				<div class="col-12"><img src="images/zaiddiazlogo.png" width="460" height="460" id="logo"></div>
+				<div class="col-12" id="aboutsite">Travel | Write | Photo</div>
 			</div>
-
+			
 			<div class="row">
-				<div class="col-12" id="enter-row"><button id="enter"><a href="gallery.html">ENTER</a></button></div>
+				<div class="col-12" id="navigation">
+					<ul id="nav-list">
+						<li class="liGallery"><a href="gallery.html">GALLERY</a></li>
+						<li class="liAboutme"><a href="aboutme.html">ABOUT ME</a></li>
+						<li class="liInfo"><a href="info.html">INFO</a></li>
+						<li class="liJournal"><a href="journal.html">JOURNAL</a></li>
+					</ul>
+				</div>
 			</div>
 
+
+			<div class="page-divider"></div>
+			
+				
+			<div class="row">
+				<div class="col-12" id="photo-gallery">
+					<a href="images/photos/Aspire-1.jpg" data-lightbox="orlando-florida" data-title="My caption"><img src="images/photos/Aspire-1.jpg" width="250" height="250"></a>
+
+					<a href="images/photos/Aspire-2.jpg" data-lightbox="orlando-florida" data-title="My caption"><img src="images/photos/Aspire-2.jpg" width="250" height="250"></a>
+					
+				</div>
+
+			</div>
+
+	
+
+
+
+
+
+
+
+
+
+			
+
+
+
+
+
+
+
+			<!-- SOCIAL MEDIA LINKS -->
 			<div class="row">
 				<div class="col-12" id="social">
 					<a target="_blank" href="https://www.instagram.com/zdpz/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -33,12 +75,6 @@
 					<a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr" aria-hidden="true"></i></a>
 				</div>
 			</div>
-
-			
-			
-
-
-
 
 
 
@@ -56,7 +92,8 @@
 		  src="https://code.jquery.com/jquery-3.1.1.min.js"
 		  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 		  crossorigin="anonymous">
-		 </script>
+		</script>
+		<script src="lightbox2-master/dist/js/lightbox.js"></script>
 		<script type="text/javascript" src="app/app.js"></script>
 	</body>
 
