Info page added
Added info page with contact information.

--- a/info.html
+++ b/info.html
@@ -38,25 +38,11 @@
 
 			<div class="page-divider"></div>
 			
-				
-			<div class="row">
-				<div class="col-12" id="photo-gallery">
-					<a href="images/photos/Aspire-1.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Aspire-1.jpg" id="thumbnailSize"></a>
-
-					<a href="images/photos/Aspire-2.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Aspire-2.jpg" id="thumbnailSize"></a>
-
-					<a href="images/photos/Aspire-3.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Aspire-3.jpg" id="thumbnailSize" class="imgGallery"></a>
-
-					<a href="images/photos/BMW.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/BMW.jpg" id="thumbnailSize" class="redBmwImg"></a>
-
-					<a href="images/photos/Curves.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Curves.jpg" id="thumbnailSize"></a>
-
-					<a href="images/photos/Grey-BMW.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Grey-BMW.jpg" id="thumbnailSize"></a>
-					
-				</div>
-
-			</div>
-
+			<div class="getInfo">
+				<h1>FOR BUSINESS INQUIRIES, PLEASE CONTACT: </h1>
+				<h2>INFO@ZAIDDIAZ.COM</h2>
+			</div>	
+			
 	
 
 
@@ -85,14 +71,6 @@
 				</div>
 			</div>
 
-
-
-
-
-
-
-
-		
 
 
 
