Changed nav links order
Per Client request, changed the order of the navigation links order.

--- a/info.html
+++ b/info.html
@@ -28,9 +28,9 @@
 				<div class="col-12" id="navigation">
 					<ul id="nav-list">
 						<li class="liGallery"><a href="gallery.html">GALLERY</a></li>
+						<li class="liJournal"><a href="journal.html">JOURNAL</a></li>
 						<li class="liAboutme"><a href="aboutme.html">ABOUT ME</a></li>
 						<li class="liInfo"><a href="info.html">INFO</a></li>
-						<li class="liJournal"><a href="journal.html">JOURNAL</a></li>
 					</ul>
 				</div>
 			</div>
@@ -40,7 +40,7 @@
 			
 			<div class="getInfo">
 				<h1>FOR BUSINESS INQUIRIES, PLEASE CONTACT: </h1>
-				<h2>INFO@ZAIDDIAZ.COM</h2>
+				<h2>ZAIDZDP@GMAIL.COM</h2>
 			</div>	
 			
 	
