Added journal page
Added journal page and wrote coming soon as a placeholder for now.

--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-12" id="aboutsite">Travel | Write | Photo</div>
+				<div class="col-12" id="aboutsite">Photographer | Traveler | Writer</div>
 			</div>
 			
 			<div class="row">
