--- a/journal.html
+++ b/journal.html
@@ -38,10 +38,12 @@
 
 			<div class="page-divider"></div>
 			
-			<div class="getInfo">
-				<h1>FOR BUSINESS INQUIRIES, PLEASE CONTACT: </h1>
-				<h2>ZAIDZDP@GMAIL.COM</h2>
-			</div>	
+			<div class="containerJournal">
+				<h2>
+					COMING SOON
+				</h2>
+			</div>
+				
 			
 	
 
