--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-12" id="aboutsite">Travel | Write | Photo</div>
+				<div class="col-12" id="aboutsite">Photographer | Traveler | Writer</div>
 			</div>
 			
 			<div class="row">
