Changed social media icons size

--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,18 @@
 					<a href="images/photos/Curves.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Curves.jpg" id="thumbnailSize"></a>
 
 					<a href="images/photos/Grey-BMW.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Grey-BMW.jpg" id="thumbnailSize"></a>
+
+					<a href="images/photos/Racing-Day-1.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Racing-Day-1.jpg" id="thumbnailSize"></a>
+
+					<a href="images/photos/Racing-Day.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Racing-Day.jpg" id="thumbnailSize"></a>
 					
+					<a href="images/photos/Red-Flowers.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Red-Flowers.jpg" id="thumbnailSize"></a>
+
+					<a href="images/photos/Shirt.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Shirt.jpg" id="thumbnailSize"></a>
+
+					<a href="images/photos/Silhouette.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Silhouette.jpg" id="thumbnailSize"></a>
+
+					<a href="images/photos/Travel-Pack.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Travel-Pack.jpg" id="thumbnailSize"></a>
 				</div>
 
 			</div>
@@ -78,10 +89,10 @@
 			<!-- SOCIAL MEDIA LINKS -->
 			<div class="row">
 				<div class="col-12" id="social">
-					<a target="_blank" href="https://www.instagram.com/zdpz/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a target="_blank" href="https://twitter.com/zaidzdp"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-					<a target="_blank" href="http://zdpz.tumblr.com/"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
-					<a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr" aria-hidden="true"></i></a>
+					<a target="_blank" href="https://www.instagram.com/zdpz/"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
+					<a target="_blank" href="https://twitter.com/zaidzdp"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+					<a target="_blank" href="http://zdpz.tumblr.com/"><i class="fa fa-tumblr fa-lg" aria-hidden="true"></i></a>
+					<a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr fa-lg" aria-hidden="true"></i></a>
 				</div>
 			</div>
 
