--- a/journal.html
+++ b/journal.html
@@ -66,10 +66,10 @@
 			<!-- SOCIAL MEDIA LINKS -->
 			<div class="row">
 				<div class="col-12" id="social">
-					<a target="_blank" href="https://www.instagram.com/zdpz/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a target="_blank" href="https://twitter.com/zaidzdp"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-					<a target="_blank" href="http://zdpz.tumblr.com/"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
-					<a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr" aria-hidden="true"></i></a>
+					<a target="_blank" href="https://www.instagram.com/zdpz/"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
+					<a target="_blank" href="https://twitter.com/zaidzdp"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+					<a target="_blank" href="http://zdpz.tumblr.com/"><i class="fa fa-tumblr fa-lg" aria-hidden="true"></i></a>
+					<a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr fa-lg" aria-hidden="true"></i></a>
 				</div>
 			</div>
 
