--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,8 @@
 	<link href="lightbox2-master/dist/css/lightbox.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/general-style.css">
+	<link rel="shortcut icon" href="zaiddiazfavicon.ico" type="image/x-icon">
+	<link rel="icon" href="zaiddiazfavicon.ico" type="image/x-icon">
 </head>
 <div class="wrapper">
 	<body>
