--- a/landingpage.html
+++ b/landingpage.html
@@ -8,6 +8,8 @@
 	<title>Zaid Diaz</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/landingpage-style.css">
+	<link rel="shortcut icon" href="zaiddiazfavicon.ico" type="image/x-icon">
+	<link rel="icon" href="zaiddiazfavicon.ico" type="image/x-icon">
 </head>
 <div class="wrapper">
 	<body>
