--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<link href="lightbox2-master/dist/css/lightbox.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/general-style.css">
-	<link rel="stylesheet" type="text/css" href="css/gallery-pictures-style.css">	
+	<link rel="stylesheet" type="text/css" href="css/gallery-pictures-style.css">
+	<link rel="shortcut icon" href="zaiddiazfavicon.ico" type="image/x-icon">
+	<link rel="icon" href="zaiddiazfavicon.ico" type="image/x-icon">	
 </head>
 <div class="wrapper">
 	<body>
