Gallery speed improvements
Added smaller size thumbnails. Page load decreased from 3.93 sec to 829
ms

--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-12" id="aboutsite">Photographer | Traveler | Writer</div>
+				<div class="col-12" id="aboutsite">Photographer | Wanderer | Daydreamer</div>
 			</div>
 			
 			<div class="row">
@@ -43,29 +43,29 @@
 				
 			<div class="row">
 				<div class="col-12" id="photo-gallery">
-					<a href="images/photos/Aspire-1.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Aspire-1.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Aspire-1.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Aspire-1.jpg" id="thumbnailSize"></a>
 
-					<a href="images/photos/Aspire-2.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Aspire-2.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Aspire-2.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Aspire-2.jpg" id="thumbnailSize"></a>
 
-					<a href="images/photos/Aspire-3.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Aspire-3.jpg" id="thumbnailSize" class="imgGallery"></a>
+					<a href="images/photos/Aspire-3.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Aspire-3.jpg" id="thumbnailSize" class="imgGallery"></a>
 
-					<a href="images/photos/BMW.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/BMW.jpg" id="thumbnailSize" class="redBmwImg"></a>
+					<a href="images/photos/BMW.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/BMW.jpg" id="thumbnailSize" class="redBmwImg"></a>
 
-					<a href="images/photos/Curves.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Curves.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Curves.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Curves.jpg" id="thumbnailSize"></a>
 
-					<a href="images/photos/Grey-BMW.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Grey-BMW.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Grey-BMW.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Grey-BMW.jpg" id="thumbnailSize"></a>
 
-					<a href="images/photos/Racing-Day-1.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Racing-Day-1.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Racing-Day-1.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Racing-Day-1.jpg" id="thumbnailSize"></a>
 
-					<a href="images/photos/Racing-Day.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Racing-Day.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Racing-Day.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Racing-Day.jpg" id="thumbnailSize"></a>
 					
-					<a href="images/photos/Red-Flowers.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Red-Flowers.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Red-Flowers.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Red-Flowers.jpg" id="thumbnailSize"></a>
 
-					<a href="images/photos/Shirt.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Shirt.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Shirt.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Shirt.jpg" id="thumbnailSize"></a>
 
-					<a href="images/photos/Silhouette.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Silhouette.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Silhouette.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Silhouette.jpg" id="thumbnailSize"></a>
 
-					<a href="images/photos/Travel-Pack.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/photos/Travel-Pack.jpg" id="thumbnailSize"></a>
+					<a href="images/photos/Travel-Pack.jpg" data-lightbox="orlando-florida" data-title=""><img src="images/thumbnails/Travel-Pack.jpg" id="thumbnailSize"></a>
 				</div>
 
 			</div>
@@ -94,7 +94,7 @@
 					<a target="_blank" href="https://www.instagram.com/zdpz/"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
 					<a target="_blank" href="https://twitter.com/zaidzdp"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
 					<a target="_blank" href="http://zdpz.tumblr.com/"><i class="fa fa-tumblr fa-lg" aria-hidden="true"></i></a>
-					<a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr fa-lg" aria-hidden="true"></i></a>
+					<!-- <a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr fa-lg" aria-hidden="true"></i></a> -->
 				</div>
 			</div>
 
