--- a/index.html
+++ b/index.html
@@ -32,25 +32,12 @@
 					<a target="_blank" href="https://www.instagram.com/zdpz/"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
 					<a target="_blank" href="https://twitter.com/zaidzdp"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
 					<a target="_blank" href="http://zdpz.tumblr.com/"><i class="fa fa-tumblr fa-lg" aria-hidden="true"></i></a>
-					<a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr fa-lg" aria-hidden="true"></i></a>
+					<!-- <a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr fa-lg" aria-hidden="true"></i></a> -->
 				</div>
 			</div>
 
 			
-			
-
-
-
-
-
-
-
-
-
-
-
 		
-
 
 
 
