--- a/info.html
+++ b/info.html
@@ -23,7 +23,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-12" id="aboutsite">Photographer | Traveler | Writer</div>
+				<div class="col-12" id="aboutsite">Photographer | Wanderer | Daydreamer</div>
 			</div>
 			
 			<div class="row">
@@ -69,7 +69,7 @@
 					<a target="_blank" href="https://www.instagram.com/zdpz/"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
 					<a target="_blank" href="https://twitter.com/zaidzdp"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
 					<a target="_blank" href="http://zdpz.tumblr.com/"><i class="fa fa-tumblr fa-lg" aria-hidden="true"></i></a>
-					<a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr fa-lg" aria-hidden="true"></i></a>
+					<!-- <a target="_blank" href="https://www.flickr.com/photos/zaidzdp/"><i class="fa fa-flickr fa-lg" aria-hidden="true"></i></a> -->
 				</div>
 			</div>
 
